# FlyweightDP

./: CMakeLists.txt  README.md  main.cpp  run.sh
Flyweight/: Gun.cpp  Gun.h  Person.cpp  Person.h
Flyweight/types/: GunType.cpp  GunType.h  PersonType.cpp  PersonType.h
game/: GameContext.cpp  GameContext.h
